0.0.7
Better defaults for those dialogs that support size ( list/text/image ).
Added image file view ( qt6 seems to support more image formats ).
Fixed default output separator.
Tided up build scripts.
Added --enable-qt6 to configure options.

0.0.5
Added textfile view.
Added output separator to options for multiple selections.
Added list box.

0.0.1
Set width/height of form dialog from opts.
Added simple form box.
Added item box.
Added input box.
Updated default options.
1st commit.
Started message boxes.