@@ -25,8 +25,9 @@ class DataClass;
 #include "FormsClass.h"
 #include "ListBoxClass.h"
 #include "FilesClass.h"
+#include "OrphanDialogClass.h"
 
-enum {ABOUT=0,ABOUTQT,WHAT,INFO,WARN,FATAL,GETTEXT,GETITEM,GETFORM,GETLIST,SHOWTEXTFILE,SHOWIMAGEFILE};
+enum {ABOUT=0,ABOUTQT,WHAT,INFO,WARN,FATAL,GETTEXT,GETITEM,GETFORM,GETLIST,SHOWTEXTFILE,SHOWIMAGEFILE,GETCOLOUR};
 
 
 #endif
