@@ -1,4 +1,7 @@
 0.0.7
+Added a desktop file for the colour chooser.
+Auto detect whether to include alpha channel in colour dialog based on start colour.
+Added colour dialog.
 Better defaults for those dialogs that support size ( list/text/image ).
 Added image file view ( qt6 seems to support more image formats ).
 Fixed default output separator.
